**Slider Adjustments:  Redefined the slider height to be height of 340px.  Adjusted the starting position of the slides from -200px to 0.  Adjusted the slide text position for bottom and split so it fits within the new slider height.  **Contact Area:  Added a container for the contact area.  The contact area is static over part of the slider instead of the right side of the browser.  Added a class for the "Contact Us" so it would show up correctly in IE. Added a top and left positions for the contact icons for IE. **Main Links:  Adjusted the height from 80 to 100px.  **Sidebar:  Changed the aside, h3 color so it matches the other navigation. **Page height:  Adjusted the height of the pages so there isn't a large gap between the bottom of the page content and the footer.  **Nav:  Left aligned the drop down navigation.

--- a/Mockup_Themes/COS-dk/css/layout.less
+++ b/Mockup_Themes/COS-dk/css/layout.less
@@ -32,12 +32,12 @@
 @headerHeight: 85px;
 @socialMediaHeight: @headerHeight - 55px;
 @headerLinksHeight: @headerHeight - @socialMediaHeight; 
-@sliderHeight: 400px;
+@sliderHeight: 340px;
 @sliderWidth: 1000px;
 @titleHeight: 24px; // subject to change based on length of dept. name
 @navMenuItemSpacing: 5px; // subject to change
 @widgetsHeight: 300px;
-@footerHeight: 150px;
+@footerHeight: 100px;
 @mainFooterHeight: @widgetsHeight + @footerHeight;
 @mainHeaderLineHeight: 40px;
 
@@ -55,10 +55,10 @@ html, body {
 	height: 100%;
 }
 #container {
-	min-height: 100%;
+	min-height: 400px;
 	height: auto !important;
 	height: 100%;
-	margin-bottom: @mainFooterHeight;
+	margin-bottom: @mainFooterHeight + 25px;
 }
 
 ::selection { /* Safari & Chrome */
@@ -170,7 +170,8 @@ section {
 			z-index: 3;
 			display: none; // hide at first
 			font-size: 12px;
-			right: 0; 
+			//right: 0; 
+			left: -6px; 
 			background: @blueGray;
 			text-align: center;
 			top: @headerLinksHeight;
@@ -403,7 +404,7 @@ section {
 			width: 100%;
 			max-width: 1180px;
 			height: auto;
-			top: -200px;
+			top: 0;
 		}
 		li h2 {
 			color: @darkBlue;
@@ -432,12 +433,12 @@ section {
 			p {top: 140px;}
 		}
 		li.slideBottom {
-			h2 {top: 260px;}
-			p {top: 300px; }
+			h2 {top: 235px;}
+			p {top: 275px; }
 		}
 		li.slideSpread {
 			h2 {top: 20px;}
-			p {top: 300px;}
+			p {top: 270px;}
 		}
 		.innerText {
 			position: absolute;
@@ -459,12 +460,19 @@ section {
 		}
 	}
 }
-
+#contactContainer{
+	position: relative;
+	width: 1000px;
+	top: -345px;
+	right: -95px;
+	margin-left: auto;
+	margin-right:auto;
+}
 #contact {
 	position: absolute;
-	right: 20px;
+	right: 70px;
 	top: 15px;
-	width: 305px; // = 4 columns
+	width: 260px; // = 4 columns
 	height: auto;
 	background: @blueGray;
 	.rounded(8px);
@@ -482,7 +490,7 @@ section {
 		text-transform: none;
 		font-weight: 300;
 		color: @blueGray;
-		span {
+		span._1 {
 			display: inline-block;
 			height: 30px;
 			line-height: 30px;
@@ -516,7 +524,7 @@ section {
 			background: @offWhite url('img/search.png') 5px center no-repeat;
 			// border: 1px solid @lighterBlueGray;
 			border: none;
-			width: 60%;
+			width: 80%;
 			color: @lightBlueGray;
 			font-size: 12px;
 			height: 14px;
@@ -544,6 +552,7 @@ section {
 		min-height: 42px;
 		li {
 			margin-left: 50px;
+			margin-top: 10px;
 		}
 	}
 	span.contactIcon {
@@ -554,6 +563,8 @@ section {
 		margin: 5px 10px;
 		width: 32px;
 		height: 32px;
+		top: 4px;
+		left: 0;
 	}
 	#contact_department span { background: url('img/contact_icons.png') 0 0; }
 	#contact_address span  { background: url('img/contact_icons.png') 0 -40px; }
@@ -571,14 +582,14 @@ section {
 }
 
 #main_links {
-	height: 80px;
+	height: 100px;
 	padding: 10px 0;
 	margin-bottom: 10px;
 	.inner-shadow(0, 0, 10px, 0.3);
 
 	div.wrap>div {
 		.column(4);
-		height: 80px;
+		height: 100px;
 		background-size: 100% auto;
 		h2 {
 			display: block;
@@ -617,7 +628,7 @@ section {
 
 	h1 {
 		.hSerif;
-		font-size: 36px;
+		font-size: 32px;
 		color: @darkBlue;
 		padding: 10px 0;
 
@@ -706,7 +717,7 @@ section {
 			border-top: 1px dashed @lightBlueGray;
 			padding: 0;
 			color: @darkBlue;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
 			
 			h2 {
 				font-size: 18px;
@@ -1005,15 +1016,33 @@ section {
 			display: block;
 			.drop-shadow(0,0,8px,0.3);
 		}
+		p {
+			width: 90%;
+			padding: 5px 5%;
+			border-top: 1px dashed @lightBlueGray;
+			border-bottom: 1px dashed @lightBlueGray;
+			font-size: 12px;
+			text-align: center;
+			color: @blueGray;
+		}
 		ul.xoxo>li, .pagenav>ul>li>a {
 			font-size: 14px;
+		}
+		ul.officeHours {
+			margin-bottom: 5px;
+			li {
+				padding-bottom: 3px;
+				margin-left: 11%;
+				padding-left: 5px;
+				border-left: solid 2px @lighterBlueGray;
+			}
 
 		}
 
 		aside {
 			h3 { 
-				color: @blueGray;
-				background: @lightBlueGray;
+				color: @offWhite;
+				background: @darkBlue;
 				height: auto; 
 				text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 -1px 0 rgba(0,0,0, 0.5);
 				margin: 5px 0;
@@ -1279,6 +1308,10 @@ section {
 
 #search_results {
 
+	h1{
+	font-size:;
+	}
+
 }
 
 #breadcrumbs {
@@ -1304,6 +1337,7 @@ section {
 		font-size: 18px;
 		line-height: 21px;
 		display: inline-block;
+		padding: 0 5px;
 	}
 }
 
